Cleanup on ch40

--- a/4T/ch40.tex
+++ b/4T/ch40.tex
@@ -1,25 +1,10 @@
 \setcounter{chapter}{ 39 }
 \chapter{\textbf{``The Beacon, part 1''} }
 
+\subChapterTitle{\hl{``Derailed''}
+\footnote{\textbf{Suko T }https://www.youtube.com/watch?v=pL4eIpRYet0\#t=142 \textsubscript{02/23/15 2:21am}}}
 
-
-
-\begin{center}
- {\LARGE \textbf{(a.k.a. } } 
-\end{center}
-\begin{center}
- {\LARGE \textbf{\hl{Derailed}} } 
-\end{center}
-\footnote{\textbf{Suko T }https://www.youtube.com/watch?v=pL4eIpRYet0\#t=142 \textsubscript{02/23/15 2:21am}}\begin{center}
- {\LARGE \textbf{)} } 
-\end{center}
-
-
-
-
-\textit{Notes:} Suko
-
-\textit{Date:} Feb 11th,  2015
+\deets{Suko}{Feb 11th,  2015}
 
 
 
@@ -311,7 +296,7 @@ Hayley thinks hard and then remembers something and says brightly, ``No.  Oh!  N
 
 ``Did she get a new title?'' wonders Hayley.
 
-``I don't know.  She's the \hl{mall cop}\footnote{\textbf{Suko T }\textless 3 \textsubscript{02/15/15 1:11am}}\_Marked as resolved\_\_Re-opened\_\footnote{$\rightarrow$\textbf{Rebecca S. }Fucking Trenton... \textsubscript{02/23/15 8:49am}} or whatever.  Who was hurt with you in the train crash.''
+``I don't know.  She's the \hl{mall cop}\footnote{\textbf{Suko T }\textless 3 \textsubscript{02/15/15 1:11am}}\footnote{$\rightarrow$\textbf{Rebecca S. }Fucking Trenton... \textsubscript{02/23/15 8:49am}} or whatever.  Who was hurt with you in the train crash.''
 
 ``Oh she was hurt too?'' says Hayley alarmed.  
 
@@ -550,7 +535,7 @@ The ringing is getting very loud now.
 
 Hayley looks at Trenton curiously, ``Why don't you know these things?  You're very smart.''
 
-Trenton replies, ``Because \textit{either}: these things aren't true, or you've had a set of experiences of which I am \textit{completely} unaware\footnote{\textbf{q.google }If that Trenton is as smart as the ``real'' Trenton, he might actually have a chance in hell of figuring out what's going on. More than the patrol does actually. \textsubscript{02/25/15 3:44pm}}.''
+Trenton replies, ``\hl{Because \textit{either}: these things aren't true, or you've had a set of experiences of which I am \textit{completely} unaware}\footnote{\textbf{q.google }If that Trenton is as smart as the ``real'' Trenton, he might actually have a chance in hell of figuring out what's going on. More than the patrol does actually. \textsubscript{02/25/15 3:44pm}}.''
 
 They stare at each other.  After a long pause, Hayley leans forward, her eyes wide, and whispers anxiously, ``Which one is it?
 
@@ -609,7 +594,7 @@ Jaya points at Javier and orders, ``Javier!  With me.'' and she starts climbing 
 
  {\color[RGB]{255,0,0}::I just got stressed out and I hallucinated a little.  Happens all the time.::} 
 
- {\color[RGB]{74,134,232}::I would ask you what drugs you take but }  {\color[RGB]{74,134,232}I do } \textit{ {\color[RGB]{74,134,232}not} } {\color[RGB]{74,134,232} want to know} \footnote{\textbf{q.google }You have chosen ... poorly. \textsubscript{02/25/15 3:47pm}}\footnote{$\rightarrow$\textbf{Suko T }Please, like Jonah ever wanted to know either :D \textsubscript{02/25/15 4:19pm}} {\color[RGB]{74,134,232}.::} 
+ {\color[RGB]{74,134,232}::\hl{I would ask you what drugs you take but }}{\color[RGB]{74,134,232}\hl{I do }}\textit{{\color[RGB]{74,134,232}\hl{not}}}{\color[RGB]{74,134,232}\hl{ want to know}} \footnote{\textbf{q.google }You have chosen ... poorly. \textsubscript{02/25/15 3:47pm}}\footnote{$\rightarrow$\textbf{Suko T }Please, like Jonah ever wanted to know either :D \textsubscript{02/25/15 4:19pm}} {\color[RGB]{74,134,232}.::} 
 
 Jaya reaches the roof of the train and and looks around.  The whole area is shrouded in a thick mist.  She snaps at Javier to be careful.  The visibility is very poor.  There is sunlight somewhere above, the light diffused and muted in the gloom.  There is a torn up patch of grass to one side of the train.  In the distance Jaya can see what look like buildings, but it's hard to make out details.
 
@@ -1281,7 +1266,7 @@ We start hearing a buzzing noise.  Hayley stops and looks upward, reminded unple
 
 ``You mean, no people but the Monastery and the person you are taking us to go see,'' says Hayley.
 
-``Well... I use the word person lightly\footnote{\textbf{q.google }Didn't answer the question. \textsubscript{02/25/15 4:24pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }It's kinda epidemic. \textsubscript{03/09/15 5:16pm}}.  Royalty is bigger than a person, right?'' says Leibowitz.
+``\hl{Well... I use the word person lightly}\footnote{\textbf{q.google }Didn't answer the question. \textsubscript{02/25/15 4:24pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }It's kinda epidemic. \textsubscript{03/09/15 5:16pm}}.  Royalty is bigger than a person, right?'' says Leibowitz.
 
 
 
@@ -1560,6 +1545,7 @@ Jonah 4
 
 \jumpHeadline{Quotes: }
 
+\quotedDialog{
 Ion: Can you be your own Operator?
 
 Rebecca: She swings both ways.
@@ -1572,50 +1558,50 @@ Suko: Hey, gotta be adaptable. It's the fuuuuuture.
 
 Rebecca: It's the future, Jonah.
 
-Suko: Get with the program, Jonah.
+Suko: Get with the program, Jonah.\\[4mm]
+}
 
 
-
-Rebecca: I don't feel comfortable with someone smiling at me so as soon as she's in reach, I'm fucking slugging her.
-
+Rebecca: I don't feel comfortable with someone smiling at me so as soon as she's in reach, I'm fucking slugging her.\\[4mm]
 
 
-REBECCAxxBEGINxxHIGHLIGHTxxRebecca: We're going to spirit-chain you awake!  I'm going to pray you well.
+\quotedDialog{
+\hl{Rebecca: We're going to spirit-chain you awake!  I'm going to pray you well.
 
-Suko:  Hallelujah!  Praise Gerhauser!xxENDxxHIGHLIGHT\footnote{\textbf{Nathaniel Ford }Lulz \textsubscript{02/23/15 3:16am}}
+Suko:  Hallelujah!  Praise Gerhauser!}\footnote{\textbf{Nathaniel Ford }Lulz \textsubscript{02/23/15 3:16am}}\\[4mm]
+}
 
-
-
+\quotedDialog{
 Jonah: Why does the plate help?
 
-Rook: Mostly because I need to boost her signal because she's...insensitive.
+Rook: Mostly because I need to boost her signal because she's... insensitive.\\[4mm]
+}
 
 
-
-Rebecca: I like how our \textit{medic }is starting the fight.  We shouldn't have given him a gun.
-
+Rebecca: I like how our \textit{medic }is starting the fight.  We shouldn't have given him a gun.\\[4mm]
 
 
+\quotedDialog{
 Jonah: Apparently, they don't seem to mind being injured. That's unexpected.
 
-Jaya (with a shrug): I dunno...I lost an arm and I kept moving.
+Jaya (with a shrug): I dunno...I lost an arm and I kept moving.\\[4mm]
+}
 
-
-
+\quotedDialog{
 Rebecca (regarding Jonah quizzing Rook): It's a battle of the most questions person \hl{against the most evasive person}\footnote{\textbf{q.google }Rook \_answers\_ questions.  It's just that he doesn't give you his cribsheet for what the answers \_mean\_. \textsubscript{02/25/15 4:33pm}}.
 
-Suko: Fight!
+Suko: Fight!\\[4mm]
+}
 
-
-
+\quotedDialog{
 Ion: I will radio Rook.
 
 Suko: Warning!  The buildings are super nice here!
 
-Rebecca: Let's move in!
+Rebecca: Let's move in!\\[4mm]
+}
 
-
-
+\quotedDialog{
 Rebecca: We getting some Sauron action?
 
 Nate: A bit like that...
@@ -1623,26 +1609,7 @@ Nate: A bit like that...
 Ion: No one has a ring, right?
 
 Nate: Javier says (in surprise), ``Uh, hey, what's this in my pocket?''
-
-
-\iffalse
-
-======================
-THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
-======================
-
-	Unable to find a matching comment for footnote: _Marked as resolved_
-
-	Unable to find a matching comment for footnote: _Re-opened_
-
-	Unable to highlight for footnote: If that Trenton is as smart as the "real" Trenton, he might actually have a chance in hell of figuring out what's going on. More than the patrol does actually., unable to correctly match (exceeded acceptable limit):ExpectedBecause either: these things aren’t true, or you’ve had a set of experiences of which I am completely unaware
-
-	Unable to highlight for footnote: You have chosen ... poorly., unable to correctly match (exceeded acceptable limit):ExpectedI do not want to know
-
-	Unable to highlight for footnote: Didn't answer the question., unable to correctly match (exceeded acceptable limit):ExpectedWell... I use the word person lightly
-
-
-\fi
+}
 
 \vspace{\fill}
 
