--- a/4T/ch4.tex
+++ b/4T/ch4.tex
@@ -64,10 +64,11 @@ BTW - Mention something about buying skills?   Nate did! It's awesome! Kinda' li
 
 
 
-\underline{  {\LARGE Challenges }  }
+\jumpHeadline{ Challenges } 
 
 
-
+{
+\parskip=0pt
 - Notice challenges: 1x3.  Failed.
 
 - Let Us IN!: 2.  \textit{Grim Visage: 2} (Jaya).  Matched. 
@@ -117,12 +118,13 @@ BTW - Mention something about buying skills?   Nate did! It's awesome! Kinda' li
 - Don't blow up the maybe bomb?: 3.  \textit{Truncheon: 1} (Jaya). Failed. 
 
 - Don't let Jonah steal TA evidence: 1.  \textit{No appropriate skill} (Jaya).  Failed.
+}
 
 
+\jumpHeadline{ Refreshes }  
 
-\underline{  {\LARGE Refreshes }  }
-
-
+{
+\parskip=0pt
 
 - Jonah acted retarded at the front gate - refreshes Social Chameleon.
 
@@ -149,10 +151,10 @@ BTW - Mention something about buying skills?   Nate did! It's awesome! Kinda' li
 - Jaya fumbles with the truncheon - refresh Truncheon. 
 
 - Hayley trips and stumbles on the way to the train - refreshes Athletic.
+}
 
 
-
-\underline{  {\LARGE Quotes }  }
+\jumpHeadline{ Quotes }  
 
 
 
