--- a/4T/ch5.tex
+++ b/4T/ch5.tex
@@ -22,7 +22,8 @@ So.  Many.  Words.
 
 We purchase some communal assets, spending 16 points.
 
-
+{
+\parskip=0pt
 
 \textit{Equipment} \textbf{Dispensary }(2): Stocked with first aid kits, painkillers, bandages, antiseptic, cleaning alcohol and basic medications along with handy satchels and pouches to carry such, this is located in a corner of the Requisition cage.
 
@@ -54,18 +55,18 @@ We purchase some communal assets, spending 16 points.
 \item \textit{Weapon} \textbf{Rifle} (1)
 \end{itemize}
 
+}
 
 
 
-
- {\LARGE SAC-09 } 
+\jumpHeadline{SAC-09 } 
 
 
 
 After the last session Tiburon and Morgan take us to the Transit Authority HQ where we are subjected to a bit of cross examination about Cardoza.  Nothing too severe though and we aren't there long.
 
 
-\jumpHeadline{Jaya and Rook }
+\sceneHeadline{Jaya and Rook }
 
 Agent Tiburon Rook meets with Jaya in the room with various tanks in it.  There are a few more than last time and some are filled.  He tells Jaya that he has a new mission for her - helping them test some delicate equipment.
 
@@ -82,7 +83,7 @@ Tiburon asks if Hayley was injured after her test of the equipment and Jaya says
 She negotiates a pay raise for herself and Jonah in return for participating in this ``testing'' and swaggers out of the room feeling very satisfied with herself.  Her strut falters as she walks down the hall and she begins to realize just what she may have signed herself up for.
 
 
-\jumpHeadline{Jonah and Oliver }
+\sceneHeadline{Jonah and Oliver }
 
 Jonah approaches Oliver and brings up Oliver's storming out of Morgan's debriefing.  He mentions that after Oliver left, Morgan actually apologized to them, which proves that sometimes it is good to yell and be angry.  The thought of Morgan apologizing makes Oliver smile, ``I would have paid to see that''.  Jonah advises Oliver to use this approach strategically, to be deliberate about using his anger for the greatest effect.  Oliver says there are lines he draws and he's not really that much of a strategist.  Jonah says that all he's asking is for Oliver to keep it in mind and if he can, give his squadmates a heads up so they can play off of his confrontational actions to hopefully gain beneficial results, like Morgan's apology.  Jonah says that Morgan seems to be more open to trusting them and working with them, and ventures that this could, potentially. be really good for us.  \hl{Jonah, with some hesitation and reluctance on his part}\footnote{\textbf{q.google }The hesitation is not just about Oliver, though Oliver has no reason to know that. \textsubscript{09/02/12 10:34pm}}, obliquely brings up the war, but just that much of a reference to it distresses Oliver and the conversation dies.
 
@@ -92,15 +93,15 @@ Jaya, fresh from her conversation with Tiburon, runs into the two of them in the
 
 
 
- {\LARGE Shore Leave! } 
+\jumpHeadline{ Shore Leave! } 
 
 
-\jumpHeadline{Shore Leave: Jaya }
+\sceneHeadline{Shore Leave: Jaya }
 
 Jaya is at Padme's tattoo parlor again.  It is after hours and the sisters are looking at Jaya's new war wounds in the mirror.  Micah is crying on the floor.  They are both showing a lot of bravado as Jaya tries to convince Padme how the bullet wound just makes her look more hardcore and Padme tries not to show how upset she is at seeing how close her sister came to being killed.  Padme asks when Jaya will get a (safer?) desk job and Jaya claims that her competence and intimidating visage keep her in the field.  Padme mentions that they are not getting as many water rations (presumably from Simon's work in the Plantations) anymore, and she's heard that everyone gets free water if they are willing to move to New Station.  Jaya tells Padme not to move there, it's not safe and she points to her wounds from that mission.
 
 
-\jumpHeadline{Shore Leave: Oliver }
+\sceneHeadline{Shore Leave: Oliver }
 
 Oliver is ambushed by his well-intentioned mother with a surprise dinner with his old schoolmate and acquaintance Roger.  His mother hopes that Roger can help be Oliver's entrée into more rarefied social circles than the ones he is currently in.  She doesn't know that Roger is the one who spotted Oliver in Cardoza when Oliver was there on the mission hunting Cyril Magnin.  
 
@@ -117,7 +118,7 @@ Oliver's mother asks his father to get a second bottle of wine and he does so be
 Oliver's mother and Roger start trying to defuse the situation, but it is too late.  There are several more vicious exchanges and Oliver excuses himself and leaves the dinner.
 
 
-\jumpHeadline{Shore Leave: Jonah }
+\sceneHeadline{Shore Leave: Jonah }
 
 Jonah briefly speaks with Trenton regarding maps, particular kinds of maps.
 
@@ -138,7 +139,7 @@ Zara leaves, but then returns to pay the bill and adds that he could set Jonah u
 Jonah's sister Riva shows up and asks what was going on, having witnessed at least part of that conversation.  Jonah puts her off and she asks him when he's going to come home.  Sounds like things aren't going well at home.  Riva mentions that they are thinking of moving somewhere else.  Apparently you can get free water if you go to one of the new stations the TA is opening up.  Jonah realizes that she's talking about New Station and warns her not to go there.  Riva is noncommittal, but says their parents are divided on whether to go.  Jonah tries to tell her he knows New Station is really hazardous, but is trying not reveal how he knows, which allows her to change the subject.  He does promise to both try and get the family more animals, as well as bring Riva something special, though he does warn it will take some time.
 
 
-\jumpHeadline{Shore Leave: Hayley }
+\sceneHeadline{Shore Leave: Hayley }
 
 Hayley returns home to find Gillian dressed to leave.  She hastily changes out of her uniform and joins Gillian on the subway train to Cardoza. Gillian warns Hayley that she will probably have to stay up most of the night, and of course Hayley says it will be no problem.
 
@@ -180,11 +181,9 @@ They arrive at Mr. Stanislav's house and after a stilted and awkward dinner, Gil
 
 
 
- {\LARGE SAC-09 } 
+\jumpHeadline{SAC-09 } 
 
 
-
-\textit{Scene:}
 
 Jonah is told to report to Dr. Gerhauser.  When he walks into MedBay, \hl{he finds Dr. Gerhauser playing the harmonica}\footnote{\textbf{q.google }There's something weirdly disturbing about this sentence, just sitting there, as if nothing else was going on. \textsubscript{09/02/12 10:54pm}}.
 
@@ -229,7 +228,7 @@ Quotes:
 ``\hl{How would I know if I was}\footnote{\textbf{q.google }Simple: none of the characters are psychologically stable.  (Mostly for very understandable reasons.) \textsubscript{09/02/12 10:58pm}}?'' Ion as Jonah
 
 
-\jumpHeadline{Oliver and Morgan }
+\sceneHeadline{Oliver and Morgan }
 
 Oliver is swimming and finds Agent Morgan waiting for him by the edge of the cistern in battle dress uniform.  He gets dressed and meets her outside the cistern.  She asks if he's had a chance to cool down from his ``outburst'' a few days before.  He apologizes for his rudeness but says that it happened because Morgan put him into the same situation he was in, in the war.  
 
@@ -306,7 +305,7 @@ Notes:
 \end{itemize}
 
 
-\jumpHeadline{Hayley and Jaya }
+\sceneHeadline{Hayley and Jaya }
 
 Hayley gets a letter.  Soon after reading it, she goes to Jaya and asks her for clarification. Hayley wants to know if Jaya really was ordering her to be rude to Trenton.  Jaya appears to not remember this order at all, but realizes it's a good one and confirms it.  Jaya notices the letter which Hayley is holding in her hands and reaches for it.  Hayley uncharacteristically snatches it away before Jaya can touch it and backs away out of arm's reach, looking alarmed and saying it's personal.  She clutches the letter to her chest and eyes Jaya warily.
 
@@ -319,7 +318,7 @@ Jaya gets suspicious and says that if that letter is a love letter from Trenton,
 Jaya levels a measuring look at Hayley but doesn't say anything further.  Hayley waits a beat to make sure Jaya is done talking and then thanks her for the clarification and leaves.
 
 
-\jumpHeadline{Oliver and Hayley }
+\sceneHeadline{Oliver and Hayley }
 
 Oliver approaches Hayley and asks her if she has had another test.  Hayley doesn't think so, but last time she had some memory loss so perhaps she just doesn't remember.  She asks if she's been gone for a long time without noticing and Oliver didn't think so.
 
@@ -340,7 +339,7 @@ The topic of Oliver's storming out of the debriefing comes up and Hayley is disa
 {[}\hl{Interestingly, my memory/interpretation of this last bit is quite different.}\footnote{\textbf{Suko T }Feel free to amend it if you wish!  I don't mind, it will just make it better.  Two sides to that scene after all!  Anyhow this is fascinating.  To be fair, most things are over Hayley's head. :P  Here Hayley felt like she was being so daring in calling him on his rudeness to Agent Morgan (criticizing a Citizen's behavior?? Gasp!) and he doesn't even notice.  Heh.  Oddly she sort of understood the first part of what he was trying to get across, she just is having a huge problem understanding the second part.  23 years of learning to keep your head down (or it's slammed down for you) will not be easy to change.  But she's working on it! :)  -Suko \textsubscript{08/15/12 12:45am}} In character as Oliver, I didn't really notice the disapproval.  Oliver's main purpose in approaching Hayley was to help her understand his motivations in confronting Agent Morgan, and the (perceived) benefits of doing so since it got him additional information.  But, clearly this subtext was over her head. :)  - Adam {]}
 
 
-\jumpHeadline{Jonah and Hayley }
+\sceneHeadline{Jonah and Hayley }
 
 Jonah approaches Hayley while she is exercising and asks her if she was hurt during the test.  Hayley promptly says no, she wasn't hurt, but she was a little dehydrated, and since she didn't get a chance to eat afterward, it took a little while to recover from that.  But nothing else.
 
@@ -361,7 +360,7 @@ Jonah then asks if she knows why they are here.  Or at least why she is here.  R
 He says she has been helpful and Hayley looks very happy to hear this, smiling widely.
 
 
-\jumpHeadline{Jonah, Oliver, and Hayley }
+\sceneHeadline{Jonah, Oliver, and Hayley }
 
 Jonah then goes to speak with Oliver.  Over a game of cards the two speculate on what is going on.  Early on in the card game, Jonah passes Oliver a card that has a note attached to it, ``I think they are listening to us.''
 
@@ -382,7 +381,7 @@ Hayley looks cheered by the suggestion, saying that she is supposed to learn to 
 They go to the ready line and practice shooting blanks and discuss gun safety.  Jonah and Oliver try to engage her in small talk but it is not terribly successful as her mind is focused on learning something new.  They suspect something is up with her but don't know what.
 
 
-\jumpHeadline{Hayley and Dr. Gerhauser }
+\sceneHeadline{Hayley and Dr. Gerhauser }
 
 Jari finds Hayley and escorts her to MedBay for her requested appointment with Dr. Gerhauser.  Dr. Gerhauser is working and barely looks up to acknowledge Hayley's entrance into MedBay.
 
@@ -411,7 +410,7 @@ Hayley tells Dr. Gerhauser that if she would tell Hayley more about what she exp
 Hayley smiles with relief and says, ``Thank you, that helps a lot.  Thank you for clarifying that.''  Dr. Gerhauser seems a little taken aback by this response but lets it go, saying, ``Well like I said, I have lots of work to do.''  She turns back to her work and pointedly ignores Hayley.  Hayley asks again to confirm that Dr. Gerhauser will explain the experiments at some point.  Dr. Gerhauser makes an noncommittal noise and doesn't look up again.  Hayley waits to make sure that was a dismissal and then she leaves.
 
 
-\jumpHeadline{Oliver and Dr. Gerhauser }
+\sceneHeadline{Oliver and Dr. Gerhauser }
 
 Oliver goes to MedBay to speak with Dr. Gerhauser.  He tries to call her Kate (or Hecate) but she ask him to call her Dr. Gerhauser.  Even if she doesn't technically have any authority over him.  He says that Agent Morgan is acting a bit more congenially, and asks if she intervened.  Dr. Gerhauser implies that she did intervene (\hl{``we have the same goals, but we approach them in different ways''}\footnote{\textbf{Suko T }Right!  I totally forgot this bit.  It's a really important line of dialog to have in here too.  Thanks! \textsubscript{08/15/12 12:46am}}) without admitting it.  Oliver thanks her for doing so.
 
@@ -421,7 +420,7 @@ Oliver mentions that his physical therapy is going well and voluntarily makes an
 
 
 
-\underline{  {\LARGE Quotes }  }
+\jumpHeadline{Quotes }  
 
 
 
