More misc formatting cleanups

--- a/4T/book1.ltx
+++ b/4T/book1.ltx
@@ -80,6 +80,7 @@
   \end{addmargin}
  }
 }
+\renewcommand{\contentsname}{Session}
 \begin{document}
 
 \pagenumbering{gobble}
@@ -95,7 +96,7 @@
 \include{ch3}
 \include{ch4}
 \include{ch5}
-\include{ch6}
+\include{ch6} 
 \include{ch7}
 \include{ch8}
 \include{ch9}
@@ -110,5 +111,5 @@
 \include{ch18}
 \include{ch19}
 \include{ch20}
-    
+   
 \end{document}
