--- a/4T/ch2.tex
+++ b/4T/ch2.tex
@@ -119,10 +119,11 @@ After about 45 minutes, the traffic snarl starts smoothing out and we eventually
 
 \jumpHeadline{Quotes }
 
+\quotedDialog{
 ``She smiles slightly but her eyes don't really focus on you.''
 
 ``So she IS like the girls I used to date!''
-
+}
 \extraIndent{ - Nate (describing Signe's reaction to Oliver) and Adam}
 
 
