--- a/4T/ch3.tex
+++ b/4T/ch3.tex
@@ -7,10 +7,6 @@
 
 \deets{Ion}{July 12, 2012}
 
-\noindent\hrulefill
-
-
-
 
 
 \jumpHeadline{ Shore Leave! } 
@@ -144,7 +140,7 @@ Jonah learns the other TA group is \textit{also} looking for Cyril Magnin.  He c
 
 
 
-``Just shut up and finish the 'Fuck' ok?''
+``Just shut up and finish the `Fuck' ok?''
 
 \extraIndent{- Jaya, getting a tattoo from Padme that says ``Don't Fuck with the TA''.}
 
@@ -184,7 +180,7 @@ Hayley: ``Maybe he drowned?''
 
 
 
-``You know, I don't think she said 'No'.''
+``You know, I don't think she said `No'.''
 
 \extraIndent{- Jonah, to Jaya and Oliver, after Hayley is gone for hours}
 
