--- a/4T/ch6.tex
+++ b/4T/ch6.tex
@@ -13,21 +13,19 @@
 
 
 
-\noindent\hrulefill
 
 
 
 
+\jumpHeadline{ SAC-09 } 
 
- {\LARGE SAC-09 } 
 
-
-\jumpHeadline{Bunker: Hayley and Oliver }
+\sceneHeadline{Bunker: Hayley and Oliver }
 
 Hayley asks Oliver about how to be \hl{rude without getting punished for it}\footnote{\textbf{Suko T }Or at least that's what she was trying to ask, who knows what actually made it through the Hayley filter. :P \textsubscript{08/31/12 11:01pm}}. Oliver tells her to learn where people's lines are and know how far you can push someone.  Hayley asks him how she is supposed to know where people's lines are without outright asking them, since that hasn't worked so well for her in the past.
 
 
-\jumpHeadline{Ops Room:  }\underline{ Officers and Patrol Group 1 }
+\sceneHeadline{Ops Room:  }\underline{ Officers and Patrol Group 1 }
 
 The alarm goes off to summon the team to the ops room.  Already present are: Morgan, Rook, Trenton, Swan \& ``Mom''\textbf{ {[}XXX: }\textbf{\hl{I didn't get her name down}}\footnote{\textbf{Suko T }I don't think it was said. She was described as ``middle aged'' I think. \textsubscript{08/31/12 11:02pm}}\textbf{{]}}.\textbf{  }They are having a hushed conversation and Trenton is grumbling.
 
@@ -50,7 +48,8 @@ The actual mission is ``GC Station''.  It had no service for many years up until
 
 
 At this point Morgan asks for questions from the patrol.
-
+{
+\parskip=0pt
 \begin{itemize}
 \item Oliver: What is the purpose of the facility?
 \end{itemize}
@@ -111,7 +110,7 @@ Morgan shows the patrol \hl{a hand-drawn picture of stoppered vials with blotche
 \end{itemize}
 
 Rook: None really.  (It appears overall that leopards don't change their spots very much.)
-
+}
 
 
 Jaya accepts the mission without hesitation.  Unsurprisingly none of the others say otherwise.  \hl{Jonah tries to ask Rook about further preparation or advice after Morgan leaves.}\footnote{\textbf{Adam Kenney }Does anyone remember the exact question that blew Rook's mind?  I seem to recall that it was a strangely specific topic, I think about trains, but I can't remember exactly. \textsubscript{09/02/12 7:42am}}\footnote{$\rightarrow$\textbf{q.google }Actually now that you mention it... the question was initially about whether we would have preparation time at base.  When the answer was (I think) negative it changed to whether we would have preparation time on the train.  But it was phrased as asking *how long the trip would be*. \textsubscript{09/02/12 12:39pm}}\footnote{$\rightarrow$\textbf{Adam Kenney }Yes, that's right!  What you asked him was how long the trip would be.  He 
@@ -122,7 +121,7 @@ asked like you asked the distance between the two moons or something.
 This seems to stymie Rook, though whether it's from uncertainty, indignation at being asked, or some other cause Jonah is not able to tell.   Jonah behaves as if asking is perfectly normal and that he is satisfied with Rook's lack of an answer.
 
 
-\jumpHeadline{The Requisition Cage }
+\sceneHeadline{The Requisition Cage }
 
 The team equips:
 
@@ -139,7 +138,7 @@ There is some friendly banter with Jari.  Oliver asks Jari if he fought in the w
 
 
 
- {\LARGE Train } 
+\sceneHeadline{Train } 
 
 
 
@@ -151,7 +150,7 @@ The train once again does that disorienting, nauseating lurch when it seems to h
 
 
 
- {\LARGE GC Station } 
+\sceneHeadline{ GC Station } 
 
 
 
@@ -231,10 +230,11 @@ Hayley hides.  Oliver shoulders his rifle and runs over to Hayley to make sure s
 
 
 
-\underline{  {\LARGE Challenges \&  }  }\underline{  {\LARGE Refreshes }  }
+\jumpHeadline{Challenges \&  Refreshes }  
 
 
-
+{
+\parskip=0pt
 \begin{itemize}
 \item Notice the watcher up above: 1.  \textit{Focused} (Oliver): 1,\textit{ Conceal} (Jonah): 1.   \textbf{Overcome: 1 VP} (Oliver).
 \item \underline{ Refresh }: Reveal team to Water Rats:\textit{ Outgoing} (Oliver)
@@ -260,9 +260,9 @@ Hayley hides.  Oliver shoulders his rifle and runs over to Hayley to make sure s
 \item Hitting Jayce for insult about her womanhood:\textit{ Adrenaline Junkie} (Jaya)
 \end{itemize}
 
+}
 
-
-\underline{  {\LARGE Quotes }  }
+\jumpHeadline{ Quotes }  
 
 
 \quotedDialog{
